Fix collapse table button icon

--- a/resources/skins.tgui.styles/components/Tables.less
+++ b/resources/skins.tgui.styles/components/Tables.less
@@ -74,7 +74,7 @@ table {
     &:before {
       width: 1.2em;
       height: 1.2em;
-      filter: var(--invert-icon);
+      filter: var(--invert-button-icon);
     }
 
     &[aria-expanded='true']:before {
