--- a/resources/skins.tgui.styles/css-variables.less
+++ b/resources/skins.tgui.styles/css-variables.less
@@ -151,7 +151,7 @@
   /* Invert */
   --invert-icon: invert(0.9);
   --invert-button-icon: invert(1);
-  --logo-invert: brightness(5) hue-rotate(25deg) opacity(0.8);
+  --invert-logo: brightness(5) hue-rotate(25deg) opacity(0.8);
 
   /* Shadow */
   --box-shadow-small: 0px 15px 20px 0px rgba(0, 0, 0, 0.75);
